--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
   <br>
   <br>
   <p>Help me learn! Fill the <a href="form.html">form</a> now!</p>
+  <br>
+  <a href="maths project.pdf"> My project</a>
   <!-- ok, this is the thing which takes you to the top. Just give the heading the id of "top" and in the href it should be "#top" -->
   <a href="#top">Back to the top</a>
   <p><i>Made by someone<sup>TM</sup></i></p>
